--- a/public/music.html
+++ b/public/music.html
@@ -228,12 +228,12 @@
 					<div class="entry-thumb portfolio-thumb">
 						<div class="imgoverlay name-hidden">
 							<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/156853449&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-							<div class="overlaycaption">
+							<!-- <div class="overlaycaption">
 								<h5 class="overlay-name title-minimal"><strong>Thomsoon</strong></h5>
 								<div class="separator-small"><span></span></div>
 								<h6 class="alttitle">Branding</h6>
-							</div>
-							<a href="portfolio-single.html" class="transition"></a>
+							</div> -->
+							<!-- <a href="portfolio-single.html" class="transition"></a> -->
 						</div>
 				   </div>
 				</div> <!-- END .portfolio-masonry-entry -->
@@ -242,12 +242,12 @@
 					<div class="entry-thumb portfolio-thumb">
 						<div class="imgoverlay name-hidden">
 							<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153177945&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-							<div class="overlaycaption">
+							<!-- <div class="overlaycaption">
 								<h5 class="overlay-name title-minimal"><strong>Bag Edit</strong></h5>
 								<div class="separator-small"><span></span></div>
 								<h6 class="alttitle">Branding</h6>
-							</div>
-							<a href="portfolio-single.html" class="transition"></a>
+							</div> -->
+							<!-- <a href="portfolio-single.html" class="transition"></a> -->
 						</div>
 				   </div>
 				</div> <!-- END .portfolio-masonry-entry -->
@@ -256,12 +256,12 @@
 					<div class="entry-thumb portfolio-thumb">
 						<div class="imgoverlay name-hidden">
 							<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152263024&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-							<div class="overlaycaption">
+							<!-- <div class="overlaycaption">
 								<h5 class="overlay-name title-minimal"><strong>Poster</strong></h5>
 								<div class="separator-small"><span></span></div>
 								<h6 class="alttitle">Print</h6>
-							</div>
-							<a href="portfolio-single.html" class="transition"></a>
+							</div> -->
+							<!-- <a href="portfolio-single.html" class="transition"></a> -->
 						</div>
 				   </div>
 				</div> <!-- END .portfolio-masonry-entry -->
@@ -270,12 +270,12 @@
 					<div class="entry-thumb portfolio-thumb">
 						<div class="imgoverlay name-hidden">
 							<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/148904758&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-							<div class="overlaycaption">
+							<!-- <div class="overlaycaption">
 								<h5 class="overlay-name title-minimal"><strong>Disk & Envelope</strong></h5>
 								<div class="separator-small"><span></span></div>
 								<h6 class="alttitle">Branding</h6>
 							</div>
-							<a href="portfolio-single.html" class="transition"></a>
+							<a href="portfolio-single.html" class="transition"></a> -->
 						</div>
 				   </div>
 				</div> <!-- END .portfolio-masonry-entry -->
@@ -284,12 +284,12 @@
 					<div class="entry-thumb portfolio-thumb">
 						<div class="imgoverlay name-hidden">
 							<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/147897711&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-							<div class="overlaycaption">
+							<!-- <div class="overlaycaption">
 								<h5 class="overlay-name title-minimal"><strong>Overhead View</strong></h5>
 								<div class="separator-small"><span></span></div>
 								<h6 class="alttitle">Print</h6>
-							</div>
-							<a href="portfolio-single.html" class="transition"></a>
+							</div> -->
+							<!-- <a href="portfolio-single.html" class="transition"></a> -->
 						</div>
 				   </div>
 				</div> <!-- END .portfolio-masonry-entry -->
@@ -529,13 +529,10 @@
 				<ul class="socialmedia-widget left-float">
 					<li class="facebook"><a href="#"></a></li>
 					<li class="twitter"><a href="#"></a></li>
-					<li class="linkedin"><a href="#"></a></li>
-					<li class="dribbble"><a href="#"></a></li>
-					<li class="behance"><a href="#"></a></li>
 					<li class="instagram"><a href="#"></a></li>
 				</ul>
 				<div class="copyright right-float">
-					Copyright &copy; 2014 by MaliaVibes.  Made with Love by Wildfyre
+					<strong>Copyright &copy; 2015 by MaliaVibes.  Made with Love by Wildfyre
 				</div>
          	</div>
     	</footer>
