--- a/public/videos.html
+++ b/public/videos.html
@@ -194,48 +194,24 @@
 					</div>
 				</div>
 			</div>
-			<br/>
-			<br/>
-			<br/>
 		</section>
 
-		<br/>
+   		<!-- BLOG SINGLE SECTION -->
+		<section id="blog-single">
+			<div class="section-inner clearfix">	 
+				<div class="blog-media">
+					<iframe src="https://www.youtube.com/embed/UQDXe72vznk" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div> <!-- END .entry-media -->
+			</div> <!-- END .section-inner-->
+		</section> <!-- END SECTION #blog-->
+
+
    		<br/>
    		<br/>
-   		<hr/>
-   		<br/>
+
+		
 		<section id="split-demo" class="notoppadding">
-       		<!-- <div class="section-inner"> 
-       			<div class="section-inner wrapper clearfix">
-					<div class="column-section clearfix">
-						<div class="column one-third">
-							<ul>
-								<li>Sunny Day Acoustic</li>
-								<li>Jason Mraz 'You Make Me High'</li>
-								<li>JSMN 'Street Sweeper'</li>
-								<li>Emily King 'Distance'</li>
-							</ul>
-						</div>
-						<div class="column one-third">
-							<ul>
-								<li>N'Sync ' Gone' Acoustic</li>
-								<li>Mali Live at 'The Park'</li>
-								<li>Justin Timerlake 'Pusher Love Girl'</li>
-								<li>Justin Timerlake 'Pusher Love Girl'</li>
-							</ul>
-						</div>
-						<div class="column one-third last-col">
-							<ul>
-								<li>Justin Timberlake 'Cry Me A River'</li>
-								<li>Drake ft. Jhene Aiko 'From Time'</li>
-								<li>Marceline Finn's 'Fry Song'</li>
-							</ul>
-						</div>
-					</div>
-				</div>	
-			</div>
- -->
-            					
+       		<div class="section-inner"> 
 				<!-- SPLIT DEMO A -->
 				<div id="split-demo-a" class="split-section clearfix">
 					<div class="split-left split-onethird">
